--- a/src/app/Owner/events/place/place.page.html
+++ b/src/app/Owner/events/place/place.page.html
@@ -8,32 +8,41 @@
 </ion-header>
 
 <ion-content class="ion-padding" fullscreen>
-    <ion-row>
-        <ion-col style="text-align: center;">
-            <ng-container *ngIf="espacioComun===undefined; else elseTemplate">
-                <div style="height: 318px; width: auto;"></div>
-            </ng-container>
-            <ng-template #elseTemplate>
-                <img [src]="convertedImage" style="height: 318px; width: auto;" class="img-fluid animated fadeIn " alt="Responsive image">
 
-            </ng-template>
-
-            <ion-item>
-                <ion-label>Disponible Desde</ion-label>
-                <ion-label>{{espacioComun?.horaDesde | date:"shortTime"}}</ion-label>
-            </ion-item>
-
-            <ion-list>
+    <ng-container *ngIf="espacioComun === undefined;else elseTemplate">
+        <ion-row class="spinner">
+            <ion-spinner name="lines"></ion-spinner>
+        </ion-row>
+    </ng-container>
+    
+    <ng-template #elseTemplate class="animated fadeIn">
+        <ion-row>
+            <ion-col style="text-align: center;">
+                <ng-container *ngIf="espacioComun===undefined; else elseTemplate">
+                    <div style="height: 318px; width: auto;"></div>
+                </ng-container>
+                <ng-template #elseTemplate>
+                    <img [src]="convertedImage" style="height: 318px; width: auto;" class="img-fluid animated fadeIn " alt="Responsive image">
+    
+                </ng-template>
+    
                 <ion-item>
-                    <ion-label>Disponible Hasta</ion-label>
-                    <ion-label>{{espacioComun?.horaHasta| date:"shortTime"}}</ion-label>
+                    <ion-label>Disponible Desde</ion-label>
+                    <ion-label>{{espacioComun?.horaDesde | date:"shortTime"}}</ion-label>
                 </ion-item>
-            </ion-list>
-        </ion-col>
-    </ion-row>
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="onClick()">
-        <ion-fab-button>
-            <ion-icon name="add"></ion-icon>
-        </ion-fab-button>
-    </ion-fab>
+    
+                <ion-list>
+                    <ion-item>
+                        <ion-label>Disponible Hasta</ion-label>
+                        <ion-label>{{espacioComun?.horaHasta| date:"shortTime"}}</ion-label>
+                    </ion-item>
+                </ion-list>
+            </ion-col>
+        </ion-row>
+        <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="onClick()">
+            <ion-fab-button>
+                <ion-icon name="add"></ion-icon>
+            </ion-fab-button>
+        </ion-fab>
+    </ng-template>
 </ion-content>
