--- a/src/app/shared/personas-bloqueadas/personas-bloqueadas.page.html
+++ b/src/app/shared/personas-bloqueadas/personas-bloqueadas.page.html
@@ -7,71 +7,47 @@
     </ion-toolbar>
   </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
 
-  <ion-row>
-    <ion-list>
-      <ion-row>
-          <ion-col>
-              <ion-item>
-                  <ion-label>
-                      Apellido
-                  </ion-label>
-              </ion-item>
-          </ion-col>
-          <ion-col>
-              <ion-item>
-                  <ion-label>
-                      Nombre
-                  </ion-label>
-              </ion-item>
-          </ion-col>
-          <ion-col>
-              <ion-item>
-                  <ion-label>
-                      DNI
-                  </ion-label>
-              </ion-item>
-          </ion-col>
-          <ion-col>
-              <ion-item>
-                  <ion-label>
-                      Fecha
-                  </ion-label>
-              </ion-item>
-          </ion-col>
-      </ion-row>
-      <ion-row *ngFor="let p of persona">
-          <ion-col>
-              <ion-item>
-                  <ion-label>
-                      {{p.apellidoPersona}}
-                  </ion-label>
-              </ion-item>
-          </ion-col>
-          <ion-col>
-              <ion-item>
-                  <ion-label>
-                      {{p.nombrePersona}}
-                  </ion-label>
-              </ion-item>
-          </ion-col>
-          <ion-col>
-              <ion-item>
-                  <ion-label>
-                      {{p.dniPersona}}
-                  </ion-label>
-              </ion-item>
-          </ion-col>
-          <ion-col>
-              <ion-item>
-                  <ion-label>
-                          {{p.personaEstado.fecha | date: 'dd-MM-yyyy'}}
-                  </ion-label>
-              </ion-item>
-          </ion-col>
-      </ion-row>
-  </ion-list>
-  </ion-row>
+<ion-row style="place-content: center;">
+    <ion-card>
+        <ion-item class="even">
+            <ion-list>
+                <ion-row>
+                <ion-col>
+                    <ion-label> Apellido </ion-label>
+                </ion-col>
+                <ion-col>
+                    <ion-label> Nombre </ion-label>
+                </ion-col>
+                <ion-col>
+                    <ion-label> DNI </ion-label>
+                </ion-col>
+                <ion-col>
+                    <ion-label> Fecha </ion-label>
+                </ion-col>
+                </ion-row>
+            </ion-list>
+        </ion-item>
+        <ion-item *ngFor="let p of persona; let i = index" [ngClass]="(i % 2 == 0) ? 'odd' : 'even'">
+            <ion-list>
+                <ion-row>
+                <ion-col>
+                    <ion-label> {{p.apellidoPersona}} </ion-label>
+                </ion-col>
+                <ion-col>
+                    <ion-label> {{p.nombrePersona}} </ion-label>
+                </ion-col>
+                <ion-col>
+                    <ion-label> {{p.dniPersona}} </ion-label>
+                </ion-col>
+                <ion-col>
+                    <ion-label> {{p.personaEstado.fecha | date: 'dd-MM-yyyy'}} </ion-label>
+                </ion-col>
+                </ion-row>
+            </ion-list>
+        </ion-item>
+    </ion-card>
+</ion-row>
 
 </ion-content>
