--- a/src/global.scss
+++ b/src/global.scss
@@ -30,3 +30,13 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
+
+.even {
+    --ion-background-color: #f1f1f2 !important
+}
+
+.spinner {
+    height: 100%;
+    width: 100%;
+    place-content: center;
+}
