--- a/src/app/Administrador/menu-administrator/menu-administrator.page.html
+++ b/src/app/Administrador/menu-administrator/menu-administrator.page.html
@@ -5,8 +5,9 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+    
     <ion-list>
-        <ion-card>
+        <ion-card class="animated fadeIn">
             <ion-item>
                 <ion-label (click)="irAAdministrarEspCom()">Administrar Espacion Comunes</ion-label>
             </ion-item>
