--- a/src/app/Administrador/new-common-space/new-common-space.page.html
+++ b/src/app/Administrador/new-common-space/new-common-space.page.html
@@ -10,7 +10,7 @@
 <ion-content class="ion-padding">
 
 
-  <ion-card>
+  <ion-card class="animated fadeIn">
     <ion-row>
       <img *ngIf="convertedImg !== undefined" [src]="convertedImg" height="250px">
       <img *ngIf="convertedImg === undefined" [src]="fotoVacia" height="250px">
