--- a/src/app/Owner/events/view-friend-list/view-friend-list.page.html
+++ b/src/app/Owner/events/view-friend-list/view-friend-list.page.html
@@ -15,9 +15,9 @@
       </ion-row>
   </ng-container>
   
-  <ng-template #elseTemplate class="animated fadeIn">
+  <ng-template #elseTemplate>
     <ion-row>
-      <ion-card>
+      <ion-card class="animated fadeIn">
         <ion-item *ngFor="let l of listaAmigo?.amigos; let i = index">
           <ion-list>
             <ion-row>
