--- a/src/app/Owner/information/phone/phone.page.html
+++ b/src/app/Owner/information/phone/phone.page.html
@@ -9,7 +9,7 @@
 
 <ion-content fullscreen class="ion-padding">
 
-    <ul class="list-group">
+    <ul class="list-group animated fadeIn">
       <li class="list-group-item">Administracion: 2616349517 </li>
       <li class="list-group-item">Emergencias: 911</li>
       <li class="list-group-item">Bomberos: 100 </li>
