--- a/src/app/Owner/menu-owner/menu-owner.page.html
+++ b/src/app/Owner/menu-owner/menu-owner.page.html
@@ -6,7 +6,7 @@
 
 <ion-content class="ion-padding">
   <ion-list>
-      <ion-card>
+      <ion-card class="animated fadeIn">
           <ion-item>
               <ion-label (click)="irAutorizacionPrevia()">Autorización Previas</ion-label>
           </ion-item>
