--- a/src/app/Administrador/data-base/data-base.page.html
+++ b/src/app/Administrador/data-base/data-base.page.html
@@ -9,14 +9,16 @@
 
 <ion-content class="ion-padding" fullscreen>
     <ion-list>
-        <ion-item>
-            <ion-label>Seleccione la Tabla</ion-label>
-            <ion-select [(ngModel)]="entity">
-                <ng-container *ngFor="let entidad of Entidades; let i=index">
-                    <ion-select-option [value]=" i ">{{entidad}}</ion-select-option>
-                </ng-container>
-            </ion-select>
-        </ion-item>
+        <ion-card class="animated fadeIn">
+            <ion-item>
+                <ion-label>Seleccione la Tabla</ion-label>
+                <ion-select [(ngModel)]="entity">
+                    <ng-container *ngFor="let entidad of Entidades; let i=index">
+                        <ion-select-option [value]=" i ">{{entidad}}</ion-select-option>
+                    </ng-container>
+                </ion-select>
+            </ion-item>
+        </ion-card>
     </ion-list>
     <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="onClick()">
         <ion-fab-button [disabled]="entity === 99">
