--- a/src/app/Administrador/manage-guard/manage-guard.page.html
+++ b/src/app/Administrador/manage-guard/manage-guard.page.html
@@ -8,31 +8,43 @@
 </ion-header>
 
 <ion-content class="ion-padding" fullscreen>
-    <ion-list>
-        <ion-list-header>
-            Guardias
-        </ion-list-header>
 
-        <ion-item-sliding *ngFor="let guardia of guardias; let i=index">
+    <ng-container *ngIf="guardias === undefined;else elseTemplate">
+        <ion-row class="spinner">
+            <ion-spinner name="lines"></ion-spinner>
+        </ion-row>
+    </ng-container>
 
-            <ion-item>
-                <ion-avatar slot="start">
-                    <img src="../../../assets/image.png">
-                </ion-avatar>
-                <ion-label>
-                    <h2>{{guardia?.nombrePersona}} {{guardia?.apellidoPersona}}</h2>
-                </ion-label>
-            </ion-item>
+    <ng-template #elseTemplate>
+        <ion-list class="animated fadeIn">
+            <ion-list-header>
+                <h3>
+                    Guardias: 
+                </h3>
+            </ion-list-header>
+    
+            <ion-item-sliding *ngFor="let guardia of guardias; let i=index">
 
-            <ion-item-options side="end">
-                <ion-item-option (click)="borrar(i)" color="danger" mode="ios">
-                    <ion-icon slot="icon-only" name="trash"></ion-icon>
-                </ion-item-option>
-            </ion-item-options>
+                <ion-item>
+                    <ion-avatar class="animated fadeIn" slot="start">
+                        <img src="../../../assets/image.png" alt="">
+                    </ion-avatar>
+                    <ion-label class="animated fadeIn">
+                        <h3> <b>Apellido: </b> {{guardia?.apellidoPersona}}</h3>
+                        <h3> <b>Nombre: </b> {{guardia?.nombrePersona}}</h3>
+                    </ion-label>
+                </ion-item>
 
-        </ion-item-sliding>
+                <ion-item-options side="end">
+                    <ion-item-option (click)="borrar(i)" color="danger" mode="ios">
+                        <ion-icon slot="icon-only" name="trash"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+            </ion-item-sliding>
+    
+        </ion-list>
+    </ng-template>
 
-    </ion-list>
 
 </ion-content>
 
