--- a/src/app/Guardia/news/news.page.html
+++ b/src/app/Guardia/news/news.page.html
@@ -1,33 +1,42 @@
 <ion-header>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-back-button defaultHref='/startmenu'></ion-back-button>
+            <ion-back-button defaultHref='/'></ion-back-button>
         </ion-buttons>
         <ion-title>Novedades</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
-    <!-- <ion-spinner name="dots"></ion-spinner> -->
-    <div class="message-wrap">
-        <div *ngFor="let novedad of novedades" [ngClass]="{'left': account.id!==novedad.creada.id, 'right': account.id==novedad.creada.id }" class="message">
-            <ng-container *ngIf="novedad?.creada.imageUrl; else elseTemplate">
-                <img class="user-img" [src]="novedad.creada.imageUrl" alt="../../../assets/image.png">
-            </ng-container>
-            <ng-template #elseTemplate>
-                <img class="user-img" src="../../../assets/image.png" alt="">
-            </ng-template>
-            <div class="msg-detail">
-                <div class="msg-info">
-                    <p>
-                        {{novedad?.creada.firstName}}&nbsp;&nbsp;&nbsp;{{novedad.fecha | date:"MM/dd/yy" }}</p>
-                </div>
-                <div class="msg-content">
-                    <span class="triangle"></span>
-                    <p class="line-breaker ">{{novedad.descripcion}}</p>
+
+    <ng-container *ngIf="novedades === undefined;else elseTemplate">
+        <ion-row class="spinner">
+            <ion-spinner name="lines"></ion-spinner>
+        </ion-row>
+    </ng-container>
+
+    <ng-template #elseTemplate>
+        <div class="message-wrap animated fadeIn">
+            <div *ngFor="let novedad of novedades" [ngClass]="{'left': account.id!==novedad.creada.id, 'right': account.id==novedad.creada.id }" class="message">
+                <ng-container *ngIf="novedad?.creada.imageUrl; else elseTemplate">
+                    <img class="user-img" [src]="novedad.creada.imageUrl" alt="../../../assets/image.png">
+                </ng-container>
+                <ng-template #elseTemplate>
+                    <img class="user-img" src="../../../assets/image.png" alt="">
+                </ng-template>
+                <div class="msg-detail">
+                    <div class="msg-info">
+                        <p>
+                            {{novedad?.creada.firstName}}&nbsp;&nbsp;&nbsp;{{novedad.fecha | date:"MM/dd/yy" }}</p>
+                    </div>
+                    <div class="msg-content">
+                        <span class="triangle"></span>
+                        <p class="line-breaker ">{{novedad.descripcion}}</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </ng-template>
+
 </ion-content>
 <ion-footer no-border>
     <div class="input-wrap">
