--- a/src/app/Owner/events/places/places.page.html
+++ b/src/app/Owner/events/places/places.page.html
@@ -17,10 +17,12 @@
     </ng-container>
     
     <ng-template #elseTemplate class="animated fadeIn">
-        <ion-list class="animated fadeIn">
-            <ion-item class="animated fadeIn" (click)="onClick(i)" [ngClass]="(i % 2 == 0) ? 'odd' : 'even'" *ngFor="let n of espacioComun; let i = index">
-                <ion-label class="animated fadeIn" class="ml-2"> {{n.nombreEspacioComun}} </ion-label>
-            </ion-item>
+        <ion-list>
+            <ion-card class="animated fadeIn">
+                <ion-item class="animated fadeIn" (click)="onClick(i)" [ngClass]="(i % 2 == 0) ? 'odd' : 'even'" *ngFor="let n of espacioComun; let i = index">
+                    <ion-label class="animated fadeIn" class="ml-2"> {{n.nombreEspacioComun}} </ion-label>
+                </ion-item>
+            </ion-card>
         </ion-list>
     </ng-template>
 </ion-content>
