--- a/src/app/Owner/information/files/files.page.html
+++ b/src/app/Owner/information/files/files.page.html
@@ -9,8 +9,24 @@
 
 <ion-content fullscreen class="ion-padding">
 
-    <ul class="list-group">
-      <li class="list-group-item" *ngFor="let n of normas, let i = index" (click)="verNorma(i)"> {{n.titulonorma}} </li>
-    </ul>
+    <ng-container *ngIf="normas === false;else elseTemplate">
+        <ion-row class="spinner">
+            <ion-spinner name="lines"></ion-spinner>
+        </ion-row>
+    </ng-container>
+  
+    <ng-template #elseTemplate>
+      <!-- <ion-card class="animated fadeIn">
+        <ion-item *ngFor="let n of normas, let i = index" (click)="verNorma(i)">
+          <ion-list>
+            <ion-label> {{n.titulonorma}}</ion-label>
+          </ion-list>
+        </ion-item>
+      </ion-card> -->
+      <ul class="list-group animated fadeIn">
+          <li class="list-group-item" *ngFor="let n of normas, let i = index" (click)="verNorma(i)"> {{n.titulonorma}} </li>
+      </ul>
+    </ng-template>
+
 
 </ion-content>
